align fields and fix tests dropdown

--- a/ng2-components/ng2-activiti-form/src/components/widgets/container/container.widget.scss
+++ b/ng2-components/ng2-activiti-form/src/components/widgets/container/container.widget.scss
@@ -4,6 +4,13 @@
     .container-widget, .container-widget__header {
     }
 
+    &-field-list {
+        padding: 0;
+        list-style-type: none;
+        width: 100%;
+        height: 100%;
+    }
+
     .container-widget__header-text {
         border-bottom: 1px solid rgba(0, 0, 0, 0.87);
         margin-left: 10px;
